# encoding: utf-8
Editra
Author: Cody Precord
Copyright: (c) Cody Precord 2005-2011
License: wxWindows

Change Log:

#-----------------------------------------------------------------------------#

Changes since last release:

VERSION 0.6.xx
DATE 0x/xx/2011
43rd Alpha Release

NEWS:

NEW: [features/enhancements]:
+Improve Python autocompletion to better detect properties.
+Launch script for source installs is now a lower case 'editra'.
+Source install on Windows now overwrites launch script installed by wxPython
for Editra to allow the separately installed version to be started.
+Expanded unittest suite to verify data in all bundled style sheets.
+Shelf window can now be maximized.

LIBRARY:
+Add LintError and LintWarning markers.

BUG FIXES:
+Fix crash that could occur when loading old format style sheet
+Fix bug in threaded file load that could lead to modified marker being
incorrectly shown on the tab for the file.
+Fix crash that could occur under rare case when closing an editor page.
+Fix bug in preferences where clicking Cancel on changing the font could still
result in the change being accepted.

#-----------------------------------------------------------------------------#

VERSION 0.6.37
DATE 04/24/2011
42nd Alpha Release

NEWS:

This version includes a new version of the Launch plugin that now supports all
file types recognized by Editra and will automatically support all future filetypes
and filetypes added by extensions. It also fixes a handful of other minor issues
as well. Note however that due to the framework changes any Launch settings from
previous versions will be lost with this upgrade as the underlying data model
has changed.

There has also been a number of API extensions and bug fixes during this release,
see the changelog below for more details about the changes in this release.

NEW: [features/enhancements]
+New version of Launch v1.10 (now supports all filetypes)